force-app/main/default/objects/Config_Object_3__c/Config_Object_3__c.object-meta.xml
<CustomObject>
    <description>This is a Configuration Object used for testing Cross-Org Data Analyzer.</description>
    <label>Config Object-3</label>
    <nameField>
        <label>Config Object-3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config Objects-3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>