force-app/main/default/objects/Config_Object_3__c/fields/Config_Field_3_1__c.field-meta.xml
<CustomField>
    <fullName>Config_Field_3_1__c</fullName>
    <label>Config Field 3.1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>