force-app/main/default/objects/Config_Object_3__c/fields/Config_Field_3_2__c.field-meta.xml
<CustomField>
    <fullName>Config_Field_3_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Config Field 3.2</label>
    <type>Checkbox</type>
</CustomField>